--- a/src/partials/example.html
+++ b/src/partials/example.html
@@ -5,7 +5,7 @@
     ❗️❗️❗️ The path to images from the HTML partial
     is the same as from the index.html file
   -->
-  <img src="images/logo.png" alt="" width="320" />
+  <!-- <img src="images/logo.png" alt="" width="320" />
 
   <p>
     The
@@ -19,7 +19,7 @@
     plugin allows you to add code from other HTML files (fragments) to HTML page
     files. Fragments are stored in the <code>src/partials</code> folder. The
     addition occurs when compiling page files, such as <code>index.html</code>.
-  </p>
+  </p> -->
 
   <p>
     This <code>example.html</code> file is an example of such a snippet, with
