--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -1,28 +1,43 @@
-.example {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  line-height: 1.5;
-  background-color: #fff;
-  color: #2f2f37;
-  max-width: 960px;
-  padding: 16px;
+.conteiner {
+  margin: 0 auto;
+  padding: 20px 15px;
+  width: 1200px;
+
 }
 
-.example code {
-  font-family: monospace;
-  font-size: 16px;
-  font-weight: 700;
-  background-color: #ff6b0a;
-  color: #fff;
-  padding: 2px 6px;
-  border-radius: 2px;
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  margin: -10px;
+  justify-content: center;
 }
 
-.example .background {
-  height: 240px;
-  // ❗️❗️❗️ The path to images from a SASS file
-  // is always the same as from the css folder.
-  background-image: url('../images/logo.png');
-  background-size: cover;
-  background-position: center;
+.video-card {
+
+  margin: 10px;
+  border: 1px solid lighten($color: #a39e9e, $amount: 1);
+  box-shadow: 2px 2px 2px rgb(190, 181, 181);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  img {
+    display: block;
+    width: 100%;
+    height: 170px;
+    background-size: cover;
+  }
+
+  @media screen and (min-width: 320px) {
+    width: 100vw;
+  }
+
+  @media screen and (min-width: 425px) {
+    width: 400px;
+  }
+
+  @media screen and (min-width: 1440px) {
+    width: calc(100vw / 4 - 30px);
+  }
+
 }
