--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,3 +1,126 @@
-<footer class="footer">
-  <div class="container"></div>
+<footer>
+  <p class="all_rights">© 2022 | All Rights Reserved |</p>
+  <p class="dev">Developed with</p>
+  <svg class="svg_img" width="14" height="12.75">
+    <use class="use_img" href="../src/images/symbol-defs.svg#icon-heart"></use>
+  </svg>
+  <p class="by">by</p>
+  <a class="footer_link" href="#" modal-footer-open>GoIT Students</a>
+  <div class="footer_backdrop is-hidden">
+    <div class="footer_modal">
+      <h2 class="team_name">TEAM_NAME_HERE</h2>
+      <button class="footer_modal_close_btn" type="button" modal-footer-close>
+        x
+      </button>
+      <ul class="team_cards">
+        <li class="team_card">
+          <div class="team_card_wrap">
+            <img
+              class="team_card_img"
+              src="./images/Anonymous_emblem.png"
+              alt="Anonymous_emblem"
+              width="150"
+              height="150"
+            />
+
+            <div class="team_card_info_wrap">
+              <p class="team_card_info_name">Name LastName</p>
+              <p class="team_card_info_role">Team Lead</p>
+            </div>
+          </div>
+        </li>
+        <li class="team_card">
+          <div class="team_card_wrap">
+            <img
+              class="team_card_img"
+              src="./images/Anonymous_emblem.png"
+              alt="Anonymous_emblem"
+              width="150"
+              height="150"
+            />
+            <div class="team_card_info_wrap">
+              <p class="team_card_info_name">Name LastName</p>
+
+              <p class="team_card_info_role">Scrum Master</p>
+            </div>
+          </div>
+        </li>
+        <li class="team_card">
+          <div class="team_card_wrap">
+            <img
+              class="team_card_img"
+              src="./images/Anonymous_emblem.png"
+              alt="Anonymous_emblem"
+              width="150"
+              height="150"
+            />
+            <div class="team_card_info_wrap">
+              <p class="team_card_info_name">Name LastName</p>
+              <p class="team_card_info_role">Frontend Developer</p>
+            </div>
+          </div>
+        </li>
+        <li class="team_card">
+          <div class="team_card_wrap">
+            <img
+              class="team_card_img"
+              src="./images/Anonymous_emblem.png"
+              alt="Anonymous_emblem"
+              width="150"
+              height="150"
+            />
+            <div class="team_card_info_wrap">
+              <p class="team_card_info_name">Name LastName</p>
+              <p class="team_card_info_role">Frontend Developer</p>
+            </div>
+          </div>
+        </li>
+        <li class="team_card">
+          <div class="team_card_wrap">
+            <img
+              class="team_card_img"
+              src="./images/Anonymous_emblem.png"
+              alt="Anonymous_emblem"
+              width="150"
+              height="150"
+            />
+            <div class="team_card_info_wrap">
+              <p class="team_card_info_name">Name LastName</p>
+              <p class="team_card_info_role">Frontend Developer</p>
+            </div>
+          </div>
+        </li>
+        <li class="team_card">
+          <div class="team_card_wrap">
+            <img
+              class="team_card_img"
+              src="./images/Anonymous_emblem.png"
+              alt="Anonymous_emblem"
+              width="150"
+              height="150"
+            />
+            <div class="team_card_info_wrap">
+              <p class="team_card_info_name">Name LastName</p>
+              <p class="team_card_info_role">Frontend Developer</p>
+            </div>
+          </div>
+        </li>
+        <li class="team_card">
+          <div class="team_card_wrap">
+            <img
+              class="team_card_img"
+              src="./images/Anonymous_emblem.png"
+              alt="Anonymous_emblem"
+              width="150"
+              height="150"
+            />
+            <div class="team_card_info_wrap">
+              <p class="team_card_info_name">Name LastName</p>
+              <p class="team_card_info_role">Frontend Developer</p>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </div>
 </footer>
